assets/component-card.css
/* ... */
.card--standard.card--text {
  background-color: transparent;
}

.card-information {
  text-align: var(--text-alignment);
}

.card__media,
.card .media {
  bottom: 0;
  position: absolute;
  top: 0;
}

.card .media {
  width: 100%;
  background-color: #F5EFF1;
}

.card__media {
  margin: var(--image-padding);
  width: calc(100% - 2 * var(--image-padding));
}

.card--standard .card__media {
  margin: var(--image-padding);
}

.card__inner {
  width: 100%;
}

.card--media .card__inner .card__content {
  position: relative;
  padding: calc(var(--image-padding) + 1rem);
}

.card__content {
  display: grid;
  grid-template-rows: minmax(0, 1fr) max-content minmax(0, 1fr);
  padding: 1rem;
  width: 100%;
  flex-grow: 1;
  z-index: -1;
}

.card__content--auto-margins {
  grid-template-rows: minmax(0, auto) max-content minmax(0, auto);
}

.grid:not(.collection-list) .card__information {
  grid-row-start: 2;
  padding: 1.3rem 1rem;
}


.collection-list .card__information,
.promo_banner .card__information  {
  display: flex;
  justify-content: space-between;
  overflow: hidden;
  margin-bottom: 0;
  padding-bottom: 0;
  padding-left: 10px!important;
  padding-right: 10px!important;
  align-items: center;
  gap: 20px;
}

.collection-list .card__information p,
.promo_banner .card__information p {
  display: none;
  color: #2b4676;
}

.collection-list .card-wrapper:hover .card__information p,
.promo_banner .card-wrapper:hover .card__information p {
  display: block;
  -webkit-transition: all 0.35s ease;
  -moz-transition: all 0.35s ease;
  transition: all 0.35s ease;  
}

.collection-list .card__information button,
.promo_banner .card__information button {
  max-height: 44px;
  margin-top: 15px;
  width: 156px;
}

.collection-list .card__caption_bottom {
  margin-bottom: 0;
  padding-left: 10px;
  padding-right: 10px;
  margin-top: 10px;
  font-size: var(--body-lg);
  line-height: 150%;
  display: none; /**hidden by request**/
}

.collection-list .card__inner .card__media  .media{
  border-radius: 22px;
  -webkit-transition: all 0.35s ease;
  -moz-transition: all 0.35s ease;
  transition: all 0.35s ease;  
}

.promo_banner .card-wrapper .card__inner .card__media .media,
.promo_banner .card-wrapper .card__information,
.promo_banner .card-wrapper .card__content {
  -webkit-transition: all 0.35s ease;
  -moz-transition: all 0.35s ease;
  transition: all 0.35s ease;  
}

.collection-list .card-wrapper:hover .card__inner .card__media .media,
.collection-list .card-wrapper:hover .card__information,
.promo_banner .card-wrapper:hover .card__inner .card__media .media,
.promo_banner .card-wrapper:hover .card__information {
  -webkit-transform: translateY(-10%);
  -moz-transform: translateY(-10%);
  -ms-transform: translateY(-10%);
  -o-transform: translateY(-10%);
  transform: translateY(-10%);
  -webkit-transition: all 0.35s ease;
  -moz-transition: all 0.35s ease;
  transition: all 0.35s ease;
}
 
.collection-list .card-wrapper:hover .card__information {
  max-height: 100%;
  -moz-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  -o-transform: translateY(-40%);
  transform: translateY(-40%);  
}

.promo_banner .card-wrapper .card__content .card__information {
  padding: 20px 30px!important; 
}

.promo_banner .card__information button {
  margin-top: 0;
}

.promo_banner .card-wrapper:hover .card__content {
  max-height: 100%;
  -moz-transform: translateY(-30%);
  -ms-transform: translateY(-30%);
  -o-transform: translateY(-30%);
  transform: translateY(-30%);  
}

@media screen and (min-width: 1200px) {
  /*.collection-list .card.card--standard {
    height: 620px;
  }*/

  .collection-list .card.card--standard .card__inner  {
    min-height: 74vh;
  }

}

/*
@media screen and (min-width: 1650px) {
  .collection-list .card.card--standard {
    height: 780px;
  }
}*/

@media screen and (max-width: 1100px) {
  .collection-list .card.card--standard .card__inner  {
    max-height: 50vh;
  }
}

/*.collection-list .card-wrapper:hover .card.card--standard > .card__content {
  background: rgb(255,255,255);
  background: -moz-linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(0,0,0,0.14889705882352944) 100%);
  background: -webkit-linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(0,0,0,0.14889705882352944) 100%);
  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(0,0,0,0.14889705882352944) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#000000",GradientType=1);
}*/

.card:not(.ratio) > .card__content {
  grid-template-rows: max-content minmax(0, 1fr) max-content auto;
}

.card-information .card__information-volume-pricing-note {
  margin-top: 0.6rem;
  line-height: calc(0.5 + 0.4 / var(--font-body-scale));
  color: rgba(var(--color-foreground), 0.75);
}

.card__information-volume-pricing-note--button,
.card__information-volume-pricing-note--button.quantity-popover__info-button--icon-with-label {
  position: relative;
  z-index: 1;
  cursor: pointer;
  padding: 0;
  margin: 0;
  text-align: var(--text-alignment);
  min-width: auto;
}

.card__information-volume-pricing-note--button:hover {
  text-decoration: underline;
}

.card__information-volume-pricing-note--button + .global-settings-popup.quantity-popover__info {
  transform: initial;
  top: auto;
  bottom: 4rem;
  max-width: 20rem;
  width: calc(95% + 2rem);
}

.card__information-volume-pricing-note--button + .global-settings-popup.quantity-popover__info span:first-of-type {
  padding-right: 0.3rem;
}

.card__information-volume-pricing-note--button-right + .global-settings-popup.quantity-popover__info {
  right: 0;
  left: auto;
}

.card__information-volume-pricing-note--button-center + .global-settings-popup.quantity-popover__info {
  left: 50%;
  transform: translate(-50%);
}

.card__information-volume-pricing-note--button + .global-settings-popup.quantity-popover__info .quantity__rules {
  text-align: left;
}
/* ... */

